--- a/curation_tools_and_files/3.collation_with_expanded_transcription_minus_segfailures/Makefile
+++ b/curation_tools_and_files/3.collation_with_expanded_transcription_minus_segfailures/Makefile
@@ -5,8 +5,8 @@
 
 
 
-all_xmls := $(notdir $(shell ls ../1.collation_with_expanded_transcription/*.xml))
-all_jpgs := $(addsuffix .jpg, $(basename $(notdir $(shell ls ../1.collation_with_expanded_transcription/*.xml))))
+all_xmls := $(notdir $(wildcard ../1.collation_with_expanded_transcription/*.xml))
+all_jpgs := $(addsuffix .jpg, $(basename $(notdir $(wildcard ../1.collation_with_expanded_transcription/*.xml))))
 
 to_remove_xmls := $(notdir $(shell ls ../2.segmentation_failures/*.xml))
 to_remove_jpgs := $(addsuffix .jpg, $(basename $(to_remove_xmls)))
@@ -19,6 +19,7 @@ remove_versos:
 	rm -f *_v.* *_v_*
 
 all: $(all_xmls) $(all_jpgs) remove_failures remove_versos
+
 
 %.xml :: ../1.collation_with_expanded_transcription/%.xml
 	ln -s $<
