Expanding abbreviations in PageXML files: leaner, faster, with XML as sole input.

--- a/curation_tools_and_files/1.collation_with_expanded_transcription/Makefile
+++ b/curation_tools_and_files/1.collation_with_expanded_transcription/Makefile
@@ -1,19 +1,23 @@
 
 
 BIN=../bin
-TEIS=../../all_teis
 RAW_XML_DIR=../0.collated_xml_pages_raw
 
-raw_xmls := $(wildcard $(RAW_XML_DIR)/*.xml)
-xmls := $(notdir $(raw_xmls))
+expanded_xmls := $(notdir $(wildcard $(RAW_XML_DIR)/*.xml))
 
 
 .DEFAULT: all 
 
-all:
-	for tei in $(TEIS)/[Uu]-17*.xml; do $(BIN)/tei_to_collated_lines.py $${tei} $(RAW_XML_DIR) ; done
+
+all: $(expanded_xmls) 
+	
+
+
+%.xml:: $(RAW_XML_DIR)/%.xml
+	$(BIN)/expand_pagexml.py $< $@ 
 
 
 .PHONY: clean
 
-
+clean:
+	rm -f *.xml
